# 3DTest — GPL-3.0-or-later
# wgpu multi-backend 3D renderer by mikedev_

[package]
name        = "threedtest"
version     = "1.4.0"
edition     = "2021"
authors     = ["hitsugori/mikedev_"]
license     = "GPL-3.0-or-later"
description = "graphics demo made with WGPU & rust"

[[bin]]
name = "3DTest"
path = "src/main.rs"

[lib]
name       = "threedtest"
crate-type = ["cdylib", "rlib"]
path       = "src/lib.rs"

[dependencies]
wgpu        = { version = "0.20", features = ["webgpu", "webgl"] }
egui        = "0.28"
egui-wgpu   = "0.28"
egui-winit  = { version = "0.28", default-features = false }
bytemuck    = { version = "1.14", features = ["derive"] }
glam        = "0.25"
image       = { version = "0.24", default-features = false, features = ["png"] }
log         = "0.4"

# ─────────────────────────────────────────────
# Native (Windows / Linux / macOS)
# ─────────────────────────────────────────────
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
winit      = "0.29"
pollster   = "0.3"
rfd        = "0.14"
webbrowser = "0.8"
env_logger = "0.11"
chrono     = "0.4"

# ─────────────────────────────────────────────
# Web (wasm32)
# ─────────────────────────────────────────────
[target.'cfg(target_arch = "wasm32")'.dependencies]
winit                = "0.29"
wasm-bindgen         = "0.2"
wasm-bindgen-futures = "0.4"
js-sys               = "0.3"
console_error_panic_hook = "0.1"
console_log          = "0.2"
getrandom            = { version = "0.2", features = ["js"] }

web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlElement",
    "Element",
    "HtmlCanvasElement",
    "Navigator",
    "Location",
    "HtmlAnchorElement",
    "Blob",
    "BlobPropertyBag",
    "Url",
    "Performance",
]}

[profile.release]
opt-level = 3
lto       = true